# MayaQtDemo

./: .gitignore  CMakeLists.txt
doc/: README.md
modules/: FindMaya.cmake
src/: CMakeLists.txt  mainWindow.cpp  mainWindowCommand.cpp  mainWindowCommand.h  pluginMain.cpp
src/MayaQtNoUI/: CMakeLists.txt  mainWindow.h  mainWindowCommand.cpp  pluginMain.cpp
src/MayaQtWithUI/: CMakeLists.txt  mainWindowCommand.cpp  mainWindowCommand.h  mainWindowUI.cpp  mainWindowUI.h  mainWindowUI.ui  pluginMain.cpp
