cmake_minimum_required(VERSION 3.21)

project(MayaQtDemo)

cmake_policy(SET CMP0048 NEW)
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/modules)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/plug-ins)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/plug-ins/Release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/plug-ins/Debug)


set(MAYA_VERSION 2020)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(Qt5_DIR  "D:/Qt/5.15.2/msvc2019_64/lib/cmake/Qt5")

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_BUILD_TYPE Release)

add_subdirectory(src/MayaQtNoUI)
add_subdirectory(src/MayaQtWithUI)
